# ai-dungeon-rpg

./: AI_Dungeon_RPG_발표.pptx  README.md  make_pptx.py  발표대본.md  발표대본_모바일.txt
backend/: .gitignore  Dockerfile  pyproject.toml  railway.json  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 37cc5785766a_add_snapshot_to_games.py  ef26b80eb21b_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  game.py  payment.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: game.py  history.py  payment.py  user.py
backend/app/services/: ai_gm.py  context_manager.py  state_manager.py  text_sanitizer.py
backend/tests/: conftest.py  test_auth.py  test_context_manager.py  test_game_routes.py  test_state_manager.py
docs/superpowers/plans/: 2026-04-20-ai-dungeon-rpg.md  2026-04-22-ai-dungeon-rpg-phase2.md
docs/superpowers/specs/: 2026-04-20-ai-dungeon-rpg-design.md
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css
frontend/src/components/game/: CharacterSheet.jsx  StatusPanel.jsx
frontend/src/components/ui/: ConfirmModal.jsx  StreamText.jsx
frontend/src/hooks/: useBGM.js  useStream.js
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  Game.jsx  GameOver.jsx  Landing.jsx  NewGame.jsx  PaymentSuccess.jsx  Pricing.jsx  Stories.jsx  Story.jsx
frontend/src/pages/auth/: Callback.jsx
frontend/src/store/: authStore.js  gameStore.js
presentation/: generate_ppt.py  script.md
